# bottles-next

./: .gitmodules  Cargo.toml  NIX.md  README.md  flake.nix  justfile
crates/download-manager/: Cargo.toml
crates/download-manager/examples/: usage.rs
crates/download-manager/src/: context.rs  download.rs  download_manager.rs  error.rs  events.rs  request.rs  scheduler.rs  worker.rs
