[workspace.package]
version = "0.1.0"
description = "Bottles Next is the evolution of Bottles"
authors = ["Eduardo Flores <edfloreshz@proton.me"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/bottlesdevs/bottles-next"
homepage = ""
categories = [""]
keywords = [""]
exclude = [""]
readme = "README.md"

[workspace]
members = [
    "crates/download-manager",
    "crates/next-cli",
    "crates/next-core",
    "crates/next-server",
    "crates/next-winebridge",
]
resolver = "2"

[workspace.dependencies]
bottles-core = { path = "crates/next-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tracing = "0.1.41"
tonic = "0.14"
tokio = { version = "1.47", features = ["full"] }
prost = "0.14"
reqwest = { version = "0.12", features = ["stream"] }
anyhow = "1.0.99"
futures-core = "0.3"
futures-util = "0.3"
