[workspace.package]
version = "0.1.0"
description = "Bottles Next is the evolution of Bottles"
authors = ["Eduardo Flores <edfloreshz@proton.me", "Inam Ul Haq <inam123451@gmail.com>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/bottlesdevs/bottles-next"
homepage = ""
categories = [""]
keywords = [""]
exclude = [""]
readme = "README.md"

[workspace]
members = [
    "crates/download-manager",
    "crates/next-cli",
    "crates/next-core",
    "crates/next-config",
    "crates/next-server",
    "crates/next-winebridge",
]
resolver = "2"

[workspace.dependencies]
bottles-core = { path = "crates/next-core" }
next-config = { path = "crates/next-config" }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
tonic = "0.14"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
anyhow = "1.0"
futures-core = "0.3"
futures-util = "0.3"
derive_builder = "0.20"
inventory = "0.3"
